Fixed/Delete MP4 too large can be found on Gh-pages

--- a/src/HomeEdit.css
+++ b/src/HomeEdit.css
@@ -96,6 +96,7 @@
     width: 100%;
     height: auto;
     border-radius: 10px;
+    border-radius: 0 !important;
 }
 
 .EditsDropdown {
